# Auto-GPT-Obsidian

./: .gitignore  README.md  pyproject.toml  tasks.md
src/bidian/common/: patching.py
src/bidian/config/: logging_config.py
src/bidian/core/: api.py  backlinker.py  retriever.py
src/bidian/creation/: templating.py
src/bidian/creation/default_templates/: glossary_entry.yaml  hub_page.yaml  summary.yaml
src/bidian/indexing/: chunking.py  discovery.py  embedding.py  indexer.py  vector_store.py
src/bidian/refactoring/: core.py
src/obsidian/: __init__.py  test_obsidian.py
tests/common/: test_patching.py
tests/core/: test_api.py  test_api_integration.py  test_backlinker.py  test_retriever.py
tests/indexing/: test_chunking.py  test_discovery.py  test_embedding.py  test_indexer.py  test_vector_store.py
tests/refactoring/: test_core.py
